2025-01-02  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.1-alpha02: Poison Enchilada';git push
	git tag -a 5.3.1-alpha02 -m 'all: 2025; ';git push --tags

	* Demonstrate prs->hyb intperolation for MERRA2 works correctly	for multi-timestep datasets

2025-01-01  Charlie Zender  <zender@uci.edu>

	* Handle fixed time dimension in PS in pure pressure input (like MERRA2)

2024-12-31  Charlie Zender  <zender@uci.edu>

	* 2025

2024-12-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.1-alpha01: Au Revoir Chloe';git push
	git tag -a 5.3.1-alpha01 -m 'Functionally identical to 5.3.0, plus autoconversion in regridder/interpolator';git push --tags

	* ncks: Add autoconversion to vertical interpolation. Works single-threaded, fails multi-threaded.

2024-12-28  Charlie Zender  <zender@uci.edu>

	* ncks: Finish autoconversion functionality in horizontal regridder

	* ncks: Generalize string length dimension size as smallest necessary integral power of 10

2024-12-24  Charlie Zender  <zender@uci.edu>

	* ncks: Add stubs to handle autoconversion in regridder

2024-12-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0: Awkward Self-Haircut';git push
	git tag -a 5.3.0 -m 'ncclimo: npo, tms area_wgt, omit -v; ncks: S1D refactor, lut_out, frc_column, frc_landunit, snw_ocn, pft->PFT, clmv4; ncrcat: fix REC_APN wrn';git push --tags

	* Release note updates

2024-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-beta01: Blagden Alley';git push
	git tag -a 5.3.0-beta01 -m 'ncclimo: npo, tms area_wgt, omit -v; ncks: S1D refactor, lut_out, frc_column, frc_landunit, snw_ocn, pft->PFT, clmv4; ncrcat: fix REC_APN wrn';git push --tags

	* Document new features

	* Update --npo paths for Chrysalis, Acme1, Perlmutter
